added copyright to simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <!--
-        @c
+        @copy-right
     -->
 	<title>New Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
