This is for conflict purpose

--- a/simple.html
+++ b/simple.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head>
     <!--
-        @c
+        @This is added for conflict, but, I'll handle it Dude!!!!
     -->
-	<title>New Title</title>
+	<title>Conflict title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -21,7 +21,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Nasuta Prod</p>
 	</footer>
 </body>
 </html>
